# qtdx

./: .gitignore  Dockerfile  README.md  compute.py  config.py  cron.py  db.py  prepare.py  pyproject.toml  qtdx.py  requirements.txt  tdx.py  utils.py
core/: common.py  config.py
datasource/: eastmoney.py  sina.py  tdx.py
db/: __init__.py  model.py  quest.py
tdx/: __init__.py  datatool.py  dayfile.py  fq.py  gbbq.py
utils/: __init__.py  file_ops.py  notify.py
