[tool.poetry]
name = "qtdx"
version = "0.1.0"
description = ""
authors = ["jing guo <mail@guojing.io>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
